src/objects/Fake_Search__c.object
<CustomObject>
    <description>for faking community search dashboards ;)</description>
    <fields>
        <fullName>Results_Clicked__c</fullName>
        <label>Results Clicked</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Results__c</fullName>
        <label>Results</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Search_String__c</fullName>
        <label>Search String</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Search_Timestamp__c</fullName>
        <label>Search Timestamp</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Search_Topic__c</fullName>
        <label>Search Topic</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <label>Fake Search</label>
    <listViews>
        <fullName>All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <displayFormat>FakeSearch-{0}</displayFormat>
        <label>Fake Search Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Fake Searches</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>